--- a/shop-ease/src/components/styles/form.css
+++ b/shop-ease/src/components/styles/form.css
@@ -1,6 +1,6 @@
 .form-container{
     max-width: 600px;
-    border-radius: 2%;
+    border-radius: 20px;
 }
 .form-container, .form-control{
     border:1px solid rgb(100, 84, 195);
